# PrimeStudio

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md
examples/: primestage_render_demo.cpp  primestage_widgets_demo.cpp
include/PrimeStage/: StudioUi.h  StudioUiMethods.h  StudioUiMethods.inl  StudioUiTypes.h
scripts/: compile.sh
src/: PrimeStudio.cpp
tests/unit/: test_builder.cpp  test_interaction.cpp  test_tabs_dropdown.cpp  test_text_selection.cpp  test_tree_view.cpp  test_widgets.cpp
